crates/nuff_linter/src/rules/nuff/snapshots/nuff_linter__rules__nuff__tests__foreign-key-model-not-imported_app_books_models.py.snap
---
source: crates/nuff_linter/src/rules/nuff/mod.rs
---
NUF004 Foreign key to `period_locks`, which `foreign-key-modules` does not list
  --> models.py:13:56
   |
11 |     company_id: Mapped[int] = mapped_column(sa.ForeignKey("companies.id"))
12 |     charge_id: Mapped[int] = mapped_column(sa.ForeignKey("public.charges.id"))
13 |     lock_id: Mapped[int] = mapped_column(sa.ForeignKey("period_locks.id"))  # NUF004 unlisted
   |                                                        ^^^^^^^^^^^^^^^^^
