crates/nuff_linter/src/rules/nuff/snapshots/nuff_linter__rules__nuff__tests__route-returns-dict_NUF002.py.snap
---
source: crates/nuff_linter/src/rules/nuff/mod.rs
---
NUF002 Route returns a `dict`; return a Pydantic schema model
  --> NUF002.py:14:26
   |
13 | @router.get("/dict")
14 | async def bare_dict() -> dict:  # NUF002
   |                          ^^^^
15 |     return {}
   |

NUF002 Route returns a `dict`; return a Pydantic schema model
  --> NUF002.py:19:35
   |
18 | @router.get("/dict-any")
19 | async def parameterised_dict() -> dict[str, Any]:  # NUF002
   |                                   ^^^^^^^^^^^^^^
20 |     return {}
   |

NUF002 Route returns a `dict`; return a Pydantic schema model
  --> NUF002.py:24:28
   |
23 | @router.post("/typing-dict")
24 | async def typing_dict() -> Dict[str, str]:  # NUF002
   |                            ^^^^^^^^^^^^^^
25 |     return {}
   |

NUF002 Route returns a `dict`; return a Pydantic schema model
  --> NUF002.py:29:30
   |
28 | @router.get("/optional")
29 | async def optional_dict() -> Optional[dict[str, str]]:  # NUF002
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^
30 |     return None
   |

NUF002 Route returns a `dict`; return a Pydantic schema model
  --> NUF002.py:34:27
   |
33 | @router.get("/union")
34 | async def union_dict() -> dict[str, str] | None:  # NUF002
   |                           ^^^^^^^^^^^^^^^^^^^^^
35 |     return None
   |
